Fix sticky header overlapping sections

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,12 +8,15 @@
   padding: 0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   box-sizing: border-box;
+  scroll-behavior: smooth !important;
 }
+
 
 /* HEADER */
 
 .header{
-  height: 100px;
+  width: 100%;
+  min-height: 100px;
   background: #91746b;
   padding: 0 50px;
   color: black;
@@ -23,10 +26,12 @@
 }
 
 .header-sticky{
-  position: fixed;
+  position: sticky;
   width: 100%;
+  min-height: 100px;
   z-index: 1;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.9);
+  top: 0
 }
 
 .logo{
@@ -80,7 +85,6 @@
   text-decoration: none;
   padding: 0 10px;
   color: black;
-  transition: 0.4s;
 }
 
 .show-menu, 
@@ -89,7 +93,6 @@
   cursor: pointer;
   padding: 0 10px;
   display: none;
-  transition: 0.4s;
 }
 
 .show-menu{
@@ -199,9 +202,7 @@
   grid-template-columns: 100%;
   place-items: center;
   gap: 2em;
-  transition: 0.4s;
-  z-index: 1
-
+  scroll-margin-top: 100px;
 }
 
 #avatar img{
@@ -218,6 +219,7 @@
 #skills{
   background: #fffafb;
   padding: 10px 0;
+  scroll-margin-top: 100px;
 }
 
 .skills-title{
@@ -253,6 +255,7 @@
 #projects{
   padding: 10px 30px;
   background: #634b66;
+  scroll-margin-top: 100px;
 }
 
 .project-title{
@@ -285,7 +288,8 @@
 
 #contact{
   background: #bfa992;
-  padding: 10px 0px
+  padding: 10px 0px;
+  scroll-margin-top: 100px;
 }
 
 .form{
